--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
         <div class="moving-boxes">
             <div class="moving_boxes_wrap">
                 <div class="moving_box_float"><i class="fa-solid fa-check"></i>
-                    <h5>Call me</h5>
+                    <h5>Regular cleaning</h5>
                 </div>
                 <div class="moving_box_float active"><i class="fa-solid fa-check"></i>
-                    <h5>Ask me</h5>
+                    <h5>One-off cleaning</h5>
                 </div>
                 <div class="moving_box_float"><i class="fa-solid fa-check"></i>
-                    <h5>Be happy</h5>
+                    <h5>fortnightly cleaning</h5>
                 </div>
 
             </div>
@@ -86,7 +86,7 @@
                                 or randomised
                             </p>
                             <div class="btn_box">
-                                <div class="btn"> <a href="">Read more</a></div>
+                                <div class="btn"> <a href="about.html">Read more</a></div>
 
                             </div>
                         </div>
@@ -139,24 +139,24 @@
                         <h2>My Service</h2>
                         <div class="cards_container">
                             <div class="card">
-                                <i class="fa-regular fa-face-smile-beam"></i>
-                                <h1>Domestic cleaning</h1>
+                                <img src="images/icon-brush.png" alt="">
+                                <h1>Regular weekly house cleaning</h1>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur reprehenderit
                                     voluptatibus maxime necessitatibus, harum porro eveniet deleniti provident error
                                     quis qui iusto, esse ipsum repudiandae, unde at corrupti eligendi quae.</p>
 
                             </div>
                             <div class="card">
-                                <i class="fa-regular fa-face-smile-beam"></i>
-                                <h1>Domestic cleaning</h1>
+                                <img src="images/icon-clean-house.png" alt="">
+                                <h1>Regular fortnightly house cleaning</h1>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur reprehenderit
                                     voluptatibus maxime necessitatibus, harum porro eveniet deleniti provident error
                                     quis qui iusto, esse ipsum repudiandae, unde at corrupti eligendi quae.</p>
 
                             </div>
                             <div class="card">
-                                <i class="fa-regular fa-face-smile-beam"></i>
-                                <h1>Domestic cleaning</h1>
+                                <img src="images/icon-hoover.png" alt="">
+                                <h1>6 hours maximum for a one-off clean</h1>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur reprehenderit
                                     voluptatibus maxime necessitatibus,</p>
 
@@ -174,7 +174,39 @@
             </div>
         </div>
     </article>
-    <footer></footer>
+    <footer>
+        <div class="info_section">
+            <div class="container">
+                <h4>Get in touch</h4>
+                <div class="info_items_container">
+                    <div class="row">
+                        <div class="item">
+                            <div class="icon-box">
+                                <a class="icon-a" href=""><i class="fa-solid fa-location-dot"></i></a>
+                            </div>
+                            <a href="">Maps</a>
+                        </div>
+                        <div class="item">
+                            <div class="icon-box">
+                                <a class="icon-a" href=""><i class="fa-solid fa-phone"></i></a>
+                            </div>
+                            <a href="">07877 320658</a>
+                        </div>
+                        <div class="item">
+                            <div class="icon-box">
+                                <a class="icon-a" href=""><i class="fa-solid fa-envelope"></i></a>
+                            </div>
+                            <a href="">szelag.marta@gmail.com</a>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="copyrights_container">
+            <p>&copy; 2024 All Rights Reserved By FamilyClean</p>
+        </div>
+    </footer>
 
 </body>
 
