--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Martusia </title>
+    <title>FamilyClean | Home </title>
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
         integrity="sha512-Avb2QiuDEEvB4bZJYdft2mNjVShBftLdPG8FJ0V7irTLQ8Uo0qcPxh4Plq7G5tGm0rU+1SPhVotteLpBERwTkw=="
@@ -12,6 +12,16 @@
 </head>
 
 <body>
+    <div class="menu_list">
+        <div class="container_menu_list">
+            <ul class="list">
+                <li class="list_li"><a href="#top">Home</a></li>
+                <li class="list_li"><a href="about.html">About</a></li>
+                <li class="list_li"><a href="service.html">Service</a></li>
+                <li class="list_li"><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </div>
     <nav>
         <div class="nav_container">
             <div class="nav_section">
@@ -35,8 +45,9 @@
                 </div>
             </div>
         </div>
+
     </nav>
-    <header>
+    <header id="top">
         <div class="container">
             <div class="row flex-row">
                 <div class="detail-box">
@@ -78,12 +89,10 @@
                         <div class="box_detail">
                             <h2>About me</h2>
                             <p>
-                                There are many variations of passages of Lorem Ipsum available, but the majority have
-                                suffered alteration
-                                in some form, by injected humour, or randomisedThere are many variations of passages of
-                                Lorem Ipsum
-                                available, but the majority have suffered alteration in some form, by injected humour,
-                                or randomised
+                                I am the premier provider of domestic & home cleaning throughout the Plymouth.
+                                Specialising
+                                in providing unbeatable house cleaning, I have built an expertise for cleaning your
+                                home to the highest possible standard and supplying an exemplary customer service.
                             </p>
                             <div class="btn_box">
                                 <div class="btn"> <a href="about.html">Read more</a></div>
@@ -107,16 +116,16 @@
                     <div class="box-info flex-reverse">
                         <div class="box_detail">
                             <h2>
-                                WE PROVIDE PROFESSIONAL
+                                I PROVIDE PROFESSIONAL
                                 HOME SERVICES.</h2>
                             <p>
-                                There are many variations of passages of Lorem Ipsum available, but the majority have
-                                suffered alteration in some form, by injected humour, or randomisedThere are many
-                                variations of passages of Lorem Ipsum available, but the majority have suffered
-                                alteration in some form, by injected humour, or randomised
+                                I offer a wide range of domestic cleaning & housekeeping services, from daily to weekly
+                                cleans
+                                & more, taking the stress of chores away and leaving your house
+                                fresh and clean for you to enjoy.
                             </p>
                             <div class="btn_box">
-                                <div class="btn"> <a href="">Read more</a></div>
+                                <div class="btn"> <a href="service.html">Read more</a></div>
 
                             </div>
                         </div>
@@ -141,30 +150,29 @@
                             <div class="card">
                                 <img src="images/icon-brush.png" alt="">
                                 <h1>Regular weekly house cleaning</h1>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur reprehenderit
-                                    voluptatibus maxime necessitatibus, harum porro eveniet deleniti provident error
-                                    quis qui iusto, esse ipsum repudiandae, unde at corrupti eligendi quae.</p>
+                                <p>Liberate valuable time by foregoing cleaning tasks and direct your attention towards
+                                    the significant aspects of your life.</p>
 
                             </div>
                             <div class="card">
                                 <img src="images/icon-clean-house.png" alt="">
                                 <h1>Regular fortnightly house cleaning</h1>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur reprehenderit
-                                    voluptatibus maxime necessitatibus, harum porro eveniet deleniti provident error
-                                    quis qui iusto, esse ipsum repudiandae, unde at corrupti eligendi quae.</p>
+                                <p>Experience the uplifting ambiance of a tidy home, offering a serene sanctuary amidst
+                                    the bustle of the outside world.</p>
 
                             </div>
                             <div class="card">
                                 <img src="images/icon-hoover.png" alt="">
                                 <h1>6 hours maximum for a one-off clean</h1>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur reprehenderit
-                                    voluptatibus maxime necessitatibus,</p>
+                                <p>I assist in eliminating dirt, germs, airborne dust, allergens, and other harmful
+                                    elements from your home, promoting the health and well-being of you and your family.
+                                </p>
 
                             </div>
                         </div>
                         <div class="btn_card">
                             <div class="btn_box">
-                                <div class="btn"> <a href="">view more</a></div>
+                                <div class="btn"> <a href="service.html">view more</a></div>
                             </div>
                         </div>
                     </div>
@@ -174,7 +182,7 @@
             </div>
         </div>
     </article>
-    <footer>
+    <footer id="contact">
         <div class="info_section">
             <div class="container">
                 <h4>Get in touch</h4>
@@ -188,15 +196,16 @@
                         </div>
                         <div class="item">
                             <div class="icon-box">
-                                <a class="icon-a" href=""><i class="fa-solid fa-phone"></i></a>
+                                <a class="icon-a" href="tel:+447877320658"><i class="fa-solid fa-phone"></i></a>
                             </div>
-                            <a href="">07877 320658</a>
+                            <a href="tel:+447877320658">07877 320658</a>
                         </div>
                         <div class="item">
                             <div class="icon-box">
-                                <a class="icon-a" href=""><i class="fa-solid fa-envelope"></i></a>
+                                <a class="icon-a" href="mailto:szelag.marta@gmail.com"><i
+                                        class="fa-solid fa-envelope"></i></a>
                             </div>
-                            <a href="">szelag.marta@gmail.com</a>
+                            <a href="mailto:szelag.marta@gmail.com">szelag.marta@gmail.com</a>
                         </div>
 
                     </div>
@@ -204,10 +213,12 @@
             </div>
         </div>
         <div class="copyrights_container">
-            <p>&copy; 2024 All Rights Reserved By FamilyClean</p>
+            <p>&copy; <span id="displayDateYear"></span> All Rights Reserved By (company Name) <br> <span
+                    class="footer_span_p">Website designed and developed by <a
+                        href="https://www.maciejszelag.co.uk">Maciej Szelag</span></a></p>
         </div>
     </footer>
-
+    <script src="js/script.js"></script>
 </body>
 
 </html>
